adding an assignment dump

--- a/p_04/P-04.md
+++ b/p_04/P-04.md
@@ -1,24 +1,24 @@
+# P-04
+
+## CSIC - P436 | _Brandon Young_
+
+### Source Code
+
+```java
 import java.io.File;
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
 
-public class Program4 {
+public class P04 {
     public static void main(String[] args) {
 
         try {
-            File f = new File(args[0]); // Creation of File Descriptor for input file
-
-            // Creates Two CubbyHoles for the Banana/Carrorot Consumers
+            File f = new File(args[0]);
             CubbyHole vowelsCub_1 = new CubbyHole();
             CubbyHole consonantCub_2 = new CubbyHole();
-
-            // Creates Producer
             Producer apple = new Producer(vowelsCub_1, consonantCub_2, f);
-
-            // Vowels Consumer
             Consumer banana = new Consumer(vowelsCub_1);
-            // Consonants Consumer
             Consumer carrot = new Consumer(consonantCub_2);
 
             apple.start();
@@ -77,17 +77,13 @@ class Consumer extends Thread {
 }
 
 class Producer extends Thread {
-    // Cubbyholes to hold vowels
-    private CubbyHole bananaCub_1;
 
-    // Cubbyholes to hold consonants
+    private CubbyHole bananaCub_1;
     private CubbyHole carrotCub_2;
     private File file;
 
     public Producer(CubbyHole c1, CubbyHole c2, File f) {
-        // Vowels
         bananaCub_1 = c1;
-        // Consonants
         carrotCub_2 = c2;
         file = f;
 
@@ -95,40 +91,34 @@ class Producer extends Thread {
 
     public void run() {
         try {
-            FileReader f = new FileReader(file); // Creation of File Reader object
-            BufferedReader b = new BufferedReader(f); // Creation of BufferedReader object
+            FileReader f = new FileReader(file);
+            BufferedReader b = new BufferedReader(f);
             int c = 0;
-            while ((c = b.read()) != -1) // Read char by Char
+            while ((c = b.read()) != -1)
             {
                 char character = (char) c;
                 switch (character) {
                     case 'a':
-                        // Call Cub_1.put()
                         bananaCub_1.put('a');
                         System.out.println('a');
                         break;
                     case 'e':
-                        // Call Cub_1.put()
                         bananaCub_1.put('e');
                         System.out.println('e');
                         break;
                     case 'i':
-                        // Call Cub_1.put()
                         bananaCub_1.put('i');
                         System.out.println('i');
                         break;
                     case 'o':
-                        // Call Cub_1.put()
                         bananaCub_1.put('o');
                         System.out.println('o');
                         break;
                     case 'u':
-                        // Call Cub_1.put()
                         bananaCub_1.put('u');
                         System.out.println('u');
                         break;
                     default:
-                        // Call Cub_2.put()
                         carrotCub_2.put(character);
                         System.out.println("Consenant");
                         ;
@@ -141,8 +131,91 @@ class Producer extends Thread {
         } catch (Exception e) {
             System.out.println(e);
         }
-
-        // File Done! Sends . to both consumers:
-
     }
 }
+
+```
+
+### Running the program
+
+```powershell
+javac P04.java
+java P04
+```
+
+### Outputs
+
+>Consenant  
+e  
+Consenant  
+o  
+Consumer using CubbyHole@202044d5 recieved: h  
+Consumer using CubbyHole@6ae01c16 recieved: e  
+Consumer using CubbyHole@202044d5 recieved: l  
+Consumer using CubbyHole@202044d5 recieved: h  
+Consenant  
+Consumer using CubbyHole@6ae01c16 recieved: o  
+e  
+Consumer using CubbyHole@6ae01c16 recieved: e  
+Consumer using CubbyHole@202044d5 recieved: l  
+Consenant  
+o  
+Consumer using CubbyHole@6ae01c16 recieved: o  
+Consumer using CubbyHole@202044d5 recieved: h  
+Consenant  
+o  
+Consenant  
+Consumer using CubbyHole@6ae01c16 recieved: o  
+a  
+Consumer using CubbyHole@202044d5 recieved: l  
+Consenant  
+Consumer using CubbyHole@6ae01c16 recieved: a  
+e  
+Consumer using CubbyHole@202044d5 recieved: t  
+Consenant  
+Consenant  
+Consumer using CubbyHole@6ae01c16 recieved: e  
+i  
+Consumer using CubbyHole@202044d5 recieved: s  
+Consumer using CubbyHole@6ae01c16 recieved: i  
+Consumer using CubbyHole@202044d5 recieved: t  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: n  
+Consenant  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: g  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 1  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 2  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 3  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 1  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 3  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 3  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 4  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 2  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 5  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 6  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 5  
+Consumer using CubbyHole@202044d5 recieved: 6  
+Consenant  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 7  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 7  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 8  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: 5  
+Consenant  
+Consumer using CubbyHole@202044d5 recieved: .  
+Consumer using CubbyHole@6ae01c16 recieved: .  
